scripts/tests/errors/err_continue_outside_loop.bu
// Test: continue outside of any loop
// Expected: compile error

continue
